--- a/app/views/notes/index.html.haml
+++ b/app/views/notes/index.html.haml
@@ -1,3 +1,8 @@
-- @note.each do |note|
-  %h2= note.title
-  %p= time_ago_in_words(note.created_at)
+.wrapper_with_padding
+  #note.clerfix
+    - unless @note.blank
+  - @note.each do |note|
+    %h2= link_to note.title, note
+    %p= time_ago_in_words(note.created_at)
+
+  = link_to "New Note", new_note_path
