Add contents to Welcome index

--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -1,1 +1,30 @@
-%h1  This is the welcome placeholder
+#banner
+  .banner_content
+    %h1  Notepal
+    %p Always forgot your Idea? Write it in Notepal, Never forget your idea again.
+    %button= link_to "Sign Up", new_user_registration_path
+#terstimonial
+  .wrapper
+    %p.quote "The best notebook application."
+    %p.name - Alandin
+#callouts
+  .callout_inner
+    .wrapper
+      .callout
+        %h2 Diary
+        %p Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+
+      .callout
+        %h2 Personal Notes
+        %p Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+
+      .callout
+        %h2 Public Notes
+        %p Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+#bottom_cta
+  .wrapper
+    %h2 For Realz!
+    %p I want you to sign up... If you don’t. I will find you!
+    %button= link_to "Click Meee!!!", new_user_registration_path
+
+        
