--- a/app/views/notes/index.html.haml
+++ b/app/views/notes/index.html.haml
@@ -1,19 +1,16 @@
 .wrapper_with_padding
   #note.clearfix
     - unless @notes.blank?
-      - @notes.each do |note|
       %a{href: (url_for [note])}
         .note
           %p.title= note.title
           %p.date= time_ago_in_words(note_created_at)
     - else
-      %h2 Add a note
-      %p It appears you haven't created any notes yet... Lets fix that. Why don't you create a new note below.
-      %button= link_to "New Note", new_note_path
+      %button= link_to "Add Note", new_note_path
 
 
 - @note.each do |note|
   %h2= link_to note.title, note
   %p= time_ago_in_words(note.created_at)
 
-= link_to "New Note", new_note_path(@note)
+%button= link_to "New Note", new_note_path(@note)
