--- a/app/views/notes/show.html.haml
+++ b/app/views/notes/show.html.haml
@@ -1,7 +1,9 @@
-%h1= @note.title
-%p= @note.content
+.wrapper_with_padding
+  #note_show
+    %h1.title= @note.title
+    %p= simple_format(@note.content)
 
 
-= link_to "All Notes", notes_path
-= link_to "Edit", edit_note_path(@note)
-= link_to "Delete", note_path(@note), method: :delete, data: {confirm: "Are you sure?" }
+%button= link_to "All Notes", notes_path
+%button= link_to "Edit", edit_note_path(@note)
+%button= link_to "Delete", note_path(@note), method: :delete, data: {confirm: "Are you sure?" }
