--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -1,5 +1,5 @@
 #banner {
-	background-image: url(image_path("welcome_banner_image.jpg"));
+	background-image: url(image_path("welcome_banner.jpg"));
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: top center;
@@ -12,7 +12,7 @@
 		text-align: center;
 		h1 {
 			@include bold_font;
-			color: white;
+			color: #afb0b0;
 			font-size: 3.5rem;
 			margin: 0;
 		}
