--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -8,9 +8,10 @@
 %body
   %header
     .header_inner
-      = link_to image_tag('logo.svg'), root_path, id: "logo"
+      = link_to image_tag('logo1.svg'), root_path, id: "logo1"
       %nav
         - if user_signed_in?
+          = link_to "Home", root_path
           = link_to "New Note", new_note_path
           = link_to "Sign Out", destroy_user_session_path, method: :delete
         - else
