--- a/app/views/notes/show.html.haml
+++ b/app/views/notes/show.html.haml
@@ -3,7 +3,6 @@
     %h1.title= @note.title
     %p= simple_format(@note.content)
 
-
-%button= link_to "All Notes", notes_path
-%button= link_to "Edit", edit_note_path(@note)
-%button= link_to "Delete", note_path(@note), method: :delete, data: {confirm: "Are you sure?" }
+.buttons
+= link_to "Edit", edit_note_path(@note), class: "button"
+= link_to "Delete", note_path(@note), method: :delete, data: {confirm: "Are you sure?" }, class: "button"
